fix: popup is NOT centered on my screen

--- a/apps/gauzy/src/app/pages/jobs/search/components/apply-job-manually/apply-job-manually.component.scss
+++ b/apps/gauzy/src/app/pages/jobs/search/components/apply-job-manually/apply-job-manually.component.scss
@@ -21,6 +21,11 @@
 		.title {
 			@include nb-rtl(text-align, right);
 		}
+		job-title-description-details {
+			div.job-detail {
+				max-height: 500px !important;
+			}
+		}
 	}
 	.well {
 		height: 50px;
